--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
 	/* transition-duration: 0.3s; */
 }
 
-.btn {
+.morgCalcNotHidden, .btn {
 	color: orangered;
 	border: 2px solid orangered;	
 }
