added morgCalcNotHidden to class that adds background

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@
 }
 
 .creditScoreDesc,
-.creditScoreGame {
+.creditScoreGame, .morgCalcNotHidden {
 	width: 600px;
 	margin: 24px auto;
 	padding: 32px;
