commented out css for morgCalcNotHidden, added it to class with credit score game positioning

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@
 	color: #15213d;
 }
 
-.creditScoreGame {
+.creditScoreGame, .morgCalcNotHidden {
 	position: absolute;
     top: 5vw;
     left: 5vw;
